Changes necessary to compile have been made for portaudio crash

--- a/client/src/windows/DES/res/EntitlementPromptUI.htm
+++ b/client/src/windows/DES/res/EntitlementPromptUI.htm
@@ -171,15 +171,15 @@
                 <div class="body">
                     <div>
                         <label for="IdEntitlementServerUrl">Entitlement Service or Server Address</label>
-                        <input type="text" id="IdEntitlementServerUrl" placeholder="example.com/e, or 123.123.123.123"/>
+                        <input type="text" id="IdEntitlementServerUrl" placeholder="ec2-54-164-78-241.compute-1.amazonaws.com"/> <!--example.com/e, or 123.123.123.123" /> -->
                     </div>
                     <div>
                         <label for="IdApplicationId">Application ID <span>only used for entitlement service</span></label>
-                        <input type="text" id="IdApplicationId" placeholder="87GSV8G7DFSTV87GF"/>
+                        <input type="text" id="IdApplicationId" placeholder="412d6ded-0a7c-4130-8844-6354fcf9027a-us-east-1" /> <!-- 87GSV8G7DFSTV87GF"/> --> 
                     </div>
                     <div>
                         <label for="IdIdentityToken">User ID <span>only used for entitlement service</span></label>
-                        <input type="text" id="IdIdentityToken" placeholder="user@domain.com"/>
+                        <input type="text" id="IdIdentityToken" placeholder="jjc29"/> <!-- user@domain.com"/> -->
                     </div>
                     <div id="IdErrorMessage" class="error"></div>
                     <span class="btn" id="ButtonOK">Connect</span>
